--- a/DQ2-2.ipynb
+++ b/DQ2-2.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -77,11 +78,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "#full_df.loc[full_df['USER']=='cmslocal']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "vm-cms-sam-pri    45680\n",
+       "vm-cms-sam-sec    33372\n",
+       "cn304             10679\n",
+       "cn416              9688\n",
+       "cn449              9538\n",
+       "                  ...  \n",
+       "cn[320                1\n",
+       "cn[1316               1\n",
+       "cn[1230               1\n",
+       "cn[1441-1444]         1\n",
+       "cn[442-444]           1\n",
+       "Name: NODELIST, Length: 1765, dtype: int64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_df['NODELIST'].value_counts()"
    ]
   },
   {
@@ -445,17 +477,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cms_df = work_df.query('USER == \"cmspilot\" or USER == \"cmslocal\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ncms_df = work_df.query('USER != \"cmspilot\" or USER != \"cmslocal\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ng1078    5626\n",
+       "ng1112    5526\n",
+       "ng1040    5249\n",
+       "ng1027    5166\n",
+       "ng1003    5135\n",
+       "          ... \n",
+       "cn1417       1\n",
+       "ng225        1\n",
+       "ng217        1\n",
+       "cn1416       1\n",
+       "cn1409       1\n",
+       "Name: NODELIST, Length: 819, dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cms_df['NODELIST'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "vm-cms-sam-pri    45680\n",
+       "vm-cms-sam-sec    33372\n",
+       "cn304              7421\n",
+       "cn1438             6472\n",
+       "cn430              6432\n",
+       "                  ...  \n",
+       "cn[1438               1\n",
+       "cn[1334-1336          1\n",
+       "cn[1235-1236]         1\n",
+       "cn[1394-1395]         1\n",
+       "cn[484                1\n",
+       "Name: NODELIST, Length: 1238, dtype: int64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ncms_df['NODELIST'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#MAP OUT NODELIST FOR CMS_DF AND NCMS_DF"
+   ]
   }
  ],
  "metadata": {
