--- a/DQ2-2.ipynb
+++ b/DQ2-2.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -381,48 +381,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       NODE  NODECOUNT\n",
-      "0    ng1078       5626\n",
-      "1    ng1112       5526\n",
-      "2    ng1040       5249\n",
-      "3    ng1027       5166\n",
-      "4    ng1003       5135\n",
-      "..      ...        ...\n",
-      "793  cn1417          1\n",
-      "794  cn1411          1\n",
-      "795  cn1410          1\n",
-      "796  cn1405          1\n",
-      "797   ng217          1\n",
-      "\n",
-      "[798 rows x 2 columns]\n",
-      "               NODE  NODECOUNT\n",
-      "0             cn304       7114\n",
-      "1             cn430       6140\n",
-      "2             cn425       6093\n",
-      "3            cn1438       6066\n",
-      "4             cn416       5996\n",
-      "...             ...        ...\n",
-      "1125  cn[1222-1223]          1\n",
-      "1126    cn[491-494]          1\n",
-      "1127        cn[1442          1\n",
-      "1128        cn[1207          1\n",
-      "1129        cn[1431          1\n",
-      "\n",
-      "[1130 rows x 2 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Aggregated the data frame information by node, cms and non-cms\n",
     "\n",
@@ -441,13 +406,13 @@
     "\n",
     "#Check work\n",
     "\n",
-    "print(cms_nodecount)\n",
-    "print(ncms_nodecount)"
+    "#print(cms_nodecount)\n",
+    "#print(ncms_nodecount)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -465,11 +430,11 @@
       "3            ng1027         5166.0           132.0         5298.0\n",
       "4            ng1003         5135.0           204.0         5339.0\n",
       "...             ...            ...             ...            ...\n",
-      "1137  cn[1222-1223]            0.0             1.0            1.0\n",
-      "1138    cn[491-494]            0.0             1.0            1.0\n",
-      "1139        cn[1442            0.0             1.0            1.0\n",
-      "1140        cn[1207            0.0             1.0            1.0\n",
-      "1141        cn[1431            0.0             1.0            1.0\n",
+      "1137  cn[1204-1205]            0.0             1.0            1.0\n",
+      "1138        cn[1355            0.0             1.0            1.0\n",
+      "1139        cn[1469            0.0             1.0            1.0\n",
+      "1140  cn[1277-1279]            0.0             1.0            1.0\n",
+      "1141  cn[1308-1311]            0.0             1.0            1.0\n",
       "\n",
       "[1142 rows x 4 columns]\n"
      ]
@@ -492,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -510,11 +475,11 @@
       "3            ng1027         5166.0           132.0         5298.0  1.224591   \n",
       "4            ng1003         5135.0           204.0         5339.0  1.217243   \n",
       "...             ...            ...             ...            ...       ...   \n",
-      "1137  cn[1222-1223]            0.0             1.0            1.0  0.000000   \n",
-      "1138    cn[491-494]            0.0             1.0            1.0  0.000000   \n",
-      "1139        cn[1442            0.0             1.0            1.0  0.000000   \n",
-      "1140        cn[1207            0.0             1.0            1.0  0.000000   \n",
-      "1141        cn[1431            0.0             1.0            1.0  0.000000   \n",
+      "1137  cn[1204-1205]            0.0             1.0            1.0  0.000000   \n",
+      "1138        cn[1355            0.0             1.0            1.0  0.000000   \n",
+      "1139        cn[1469            0.0             1.0            1.0  0.000000   \n",
+      "1140  cn[1277-1279]            0.0             1.0            1.0  0.000000   \n",
+      "1141  cn[1308-1311]            0.0             1.0            1.0  0.000000   \n",
       "\n",
       "      PERC_NCMS  PERC_TOT  CMS_TAG  \n",
       "0      0.014711  0.329451     True  \n",
@@ -548,47 +513,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "               NODE  NODECOUNT_CMS  NODECOUNT_NCMS  NODECOUNT_TOT  PERC_CMS  \\\n",
-      "0            ng1078         5626.0           198.0         5824.0  1.333634   \n",
-      "1            ng1112         5526.0           374.0         5900.0  1.309929   \n",
-      "2            ng1040         5249.0           147.0         5396.0  1.244266   \n",
-      "3            ng1027         5166.0           132.0         5298.0  1.224591   \n",
-      "4            ng1003         5135.0           204.0         5339.0  1.217243   \n",
-      "...             ...            ...             ...            ...       ...   \n",
-      "1137  cn[1222-1223]            0.0             1.0            1.0  0.000000   \n",
-      "1138    cn[491-494]            0.0             1.0            1.0  0.000000   \n",
-      "1139        cn[1442            0.0             1.0            1.0  0.000000   \n",
-      "1140        cn[1207            0.0             1.0            1.0  0.000000   \n",
-      "1141        cn[1431            0.0             1.0            1.0  0.000000   \n",
-      "\n",
-      "      PERC_NCMS  PERC_TOT CMS_TAG  \n",
-      "0      0.014711  0.329451     Yes  \n",
-      "1      0.027787  0.333750     Yes  \n",
-      "2      0.010922  0.305240     Yes  \n",
-      "3      0.009807  0.299697     Yes  \n",
-      "4      0.015157  0.302016     Yes  \n",
-      "...         ...       ...     ...  \n",
-      "1137   0.000074  0.000057      No  \n",
-      "1138   0.000074  0.000057      No  \n",
-      "1139   0.000074  0.000057      No  \n",
-      "1140   0.000074  0.000057      No  \n",
-      "1141   0.000074  0.000057      No  \n",
-      "\n",
-      "[1142 rows x 8 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#For some reason, running the line below eliminates all False tagged rows, but \n",
     "#calling the False designation does not??????\n",
@@ -599,12 +530,12 @@
     "\n",
     "nodes_df.loc[nodes_df['CMS_TAG'] == False, 'CMS_TAG'] = 'No'\n",
     "nodes_df.loc[nodes_df['CMS_TAG'] != 'No', 'CMS_TAG'] = 'Yes'\n",
-    "print(nodes_df)"
+    "#print(nodes_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -639,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -654,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -665,109 +596,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       NODE  NODECOUNT_CMS  NODECOUNT_NCMS  NODECOUNT_TOT  PERC_CMS  \\\n",
-      "565   cn304          307.0          7114.0         7421.0  0.072774   \n",
-      "635   cn383          242.0          5434.0         5676.0  0.057366   \n",
-      "484   cn394          352.0          5685.0         6037.0  0.083441   \n",
-      "464   cn416          364.0          5996.0         6360.0  0.086286   \n",
-      "574   cn421          301.0          5920.0         6221.0  0.071352   \n",
-      "616   cn425          261.0          6093.0         6354.0  0.061870   \n",
-      "587   cn430          292.0          6140.0         6432.0  0.069218   \n",
-      "430   cn449          378.0          5821.0         6199.0  0.089604   \n",
-      "671   cn463          215.0          5557.0         5772.0  0.050965   \n",
-      "233  cn1433          463.0          5386.0         5849.0  0.109753   \n",
-      "268  cn1436          446.0          5655.0         6101.0  0.105724   \n",
-      "341  cn1437          412.0          5356.0         5768.0  0.097664   \n",
-      "357  cn1438          406.0          6066.0         6472.0  0.096242   \n",
-      "278  cn1442          441.0          5419.0         5860.0  0.104538   \n",
-      "334  cn1448          415.0          5629.0         6044.0  0.098375   \n",
-      "256  cn1449          451.0          5914.0         6365.0  0.106909   \n",
-      "356  cn1457          407.0          5917.0         6324.0  0.096479   \n",
-      "392  cn1459          392.0          5231.0         5623.0  0.092923   \n",
-      "292  cn1460          432.0          5206.0         5638.0  0.102405   \n",
-      "247  cn1467          453.0          5912.0         6365.0  0.107383   \n",
-      "281  cn1468          441.0          5892.0         6333.0  0.104538   \n",
-      "196  cn1471          486.0          5466.0         5952.0  0.115205   \n",
-      "391  cn1472          393.0          5773.0         6166.0  0.093160   \n",
-      "399  cn1474          391.0          5320.0         5711.0  0.092686   \n",
-      "104  cn1479          577.0          5346.0         5923.0  0.136777   \n",
-      "10    ng205         4238.0           112.0         4350.0  1.004611   \n",
-      "14    ng502         4060.0           126.0         4186.0  0.962416   \n",
-      "5     ng507         4897.0           212.0         5109.0  1.160825   \n",
-      "18    ng514         3906.0           165.0         4071.0  0.925911   \n",
-      "13    ng518         4072.0           582.0         4654.0  0.965261   \n",
-      "16    ng678         3930.0           110.0         4040.0  0.931600   \n",
-      "12    ng688         4124.0           104.0         4228.0  0.977587   \n",
-      "23    ng733         3493.0           110.0         3603.0  0.828010   \n",
-      "20    ng734         3791.0           290.0         4081.0  0.898650   \n",
-      "24    ng739         3256.0           208.0         3464.0  0.771829   \n",
-      "7     ng909         4614.0           137.0         4751.0  1.093741   \n",
-      "19    ng915         3836.0           144.0         3980.0  0.909317   \n",
-      "4    ng1003         5135.0           204.0         5339.0  1.217243   \n",
-      "15   ng1014         4049.0           234.0         4283.0  0.959808   \n",
-      "9    ng1020         4350.0           227.0         4577.0  1.031160   \n",
-      "3    ng1027         5166.0           132.0         5298.0  1.224591   \n",
-      "17   ng1036         3920.0           133.0         4053.0  0.929229   \n",
-      "22   ng1039         3587.0            49.0         3636.0  0.850292   \n",
-      "2    ng1040         5249.0           147.0         5396.0  1.244266   \n",
-      "21   ng1061         3776.0           101.0         3877.0  0.895094   \n",
-      "8    ng1063         4378.0           121.0         4499.0  1.037797   \n",
-      "6    ng1067         4859.0           133.0         4992.0  1.151818   \n",
-      "0    ng1078         5626.0           198.0         5824.0  1.333634   \n",
-      "11   ng1080         4145.0           101.0         4246.0  0.982565   \n",
-      "1    ng1112         5526.0           374.0         5900.0  1.309929   \n",
+      "      NODE  NODECOUNT_CMS  NODECOUNT_NCMS  NODECOUNT_TOT  PERC_CMS  PERC_NCMS  \\\n",
+      "565  cn304          307.0          7114.0         7421.0  0.072774   0.528555   \n",
+      "635  cn383          242.0          5434.0         5676.0  0.057366   0.403735   \n",
+      "484  cn394          352.0          5685.0         6037.0  0.083441   0.422384   \n",
+      "464  cn416          364.0          5996.0         6360.0  0.086286   0.445490   \n",
+      "574  cn421          301.0          5920.0         6221.0  0.071352   0.439844   \n",
       "\n",
-      "     PERC_NCMS  PERC_TOT CMS_TAG  TAG900  \n",
-      "565   0.528555  0.419790     Yes   False  \n",
-      "635   0.403735  0.321079     Yes   False  \n",
-      "484   0.422384  0.341500     Yes   False  \n",
-      "464   0.445490  0.359772     Yes   False  \n",
-      "574   0.439844  0.351909     Yes   False  \n",
-      "616   0.452697  0.359432     Yes   False  \n",
-      "587   0.456189  0.363845     Yes   False  \n",
-      "430   0.432488  0.350664     Yes   False  \n",
-      "671   0.412873  0.326510     Yes   False  \n",
-      "233   0.400169  0.330865     Yes   False  \n",
-      "268   0.420155  0.345121     Yes   False  \n",
-      "341   0.397940  0.326283     Yes   False  \n",
-      "357   0.450691  0.366107     Yes   False  \n",
-      "278   0.402620  0.331488     Yes   False  \n",
-      "334   0.418223  0.341896     Yes   False  \n",
-      "256   0.439398  0.360054     Yes   False  \n",
-      "356   0.439621  0.357735     Yes   False  \n",
-      "392   0.388652  0.318081     Yes   False  \n",
-      "292   0.386795  0.318930     Yes   False  \n",
-      "247   0.439249  0.360054     Yes   False  \n",
-      "281   0.437763  0.358244     Yes   False  \n",
-      "196   0.406112  0.336692     Yes   False  \n",
-      "391   0.428922  0.348797     Yes   False  \n",
-      "399   0.395265  0.323059     Yes   False  \n",
-      "104   0.397197  0.335051     Yes   False  \n",
-      "10    0.008321  0.246070     Yes    True  \n",
-      "14    0.009362  0.236793     Yes    True  \n",
-      "5     0.015751  0.289005     Yes    True  \n",
-      "18    0.012259  0.230288     Yes    True  \n",
-      "13    0.043241  0.263267     Yes    True  \n",
-      "16    0.008173  0.228534     Yes    True  \n",
-      "12    0.007727  0.239169     Yes    True  \n",
-      "23    0.008173  0.203814     Yes    True  \n",
-      "20    0.021546  0.230853     Yes    True  \n",
-      "24    0.015454  0.195951     Yes    True  \n",
-      "7     0.010179  0.268754     Yes    True  \n",
-      "19    0.010699  0.225140     Yes    True  \n",
-      "4     0.015157  0.302016     Yes    True  \n",
-      "15    0.017386  0.242280     Yes    True  \n",
-      "9     0.016866  0.258911     Yes    True  \n",
-      "3     0.009807  0.299697     Yes    True  \n",
-      "17    0.009882  0.229270     Yes    True  \n",
-      "22    0.003641  0.205681     Yes    True  \n",
-      "2     0.010922  0.305240     Yes    True  \n",
-      "21    0.007504  0.219314     Yes    True  \n",
-      "8     0.008990  0.254499     Yes    True  \n",
-      "6     0.009882  0.282387     Yes    True  \n",
-      "0     0.014711  0.329451     Yes    True  \n",
-      "11    0.007504  0.240187     Yes    True  \n",
-      "1     0.027787  0.333750     Yes    True  \n"
+      "     PERC_TOT CMS_TAG  TAG900  \n",
+      "565  0.419790     Yes   False  \n",
+      "635  0.321079     Yes   False  \n",
+      "484  0.341500     Yes   False  \n",
+      "464  0.359772     Yes   False  \n",
+      "574  0.351909     Yes   False  \n"
      ]
     }
    ],
@@ -788,25 +629,25 @@
     "\n",
     "nodes_25 = nodes_25.sort_values('NODE', ascending = True).head(50)\n",
     "\n",
-    "print(nodes_25)"
+    "print(nodes_25.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x193a2c5ff10>"
+       "<matplotlib.legend.Legend at 0x2902b1541f0>"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -855,20 +696,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x193a6598190>"
+       "<matplotlib.legend.Legend at 0x2902de39bb0>"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -917,20 +758,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1939fd522b0>"
+       "<matplotlib.legend.Legend at 0x2902b9ff430>"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -978,41 +819,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"Graph1.PNG\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"Graph2.PNG\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"Graph3.PNG\">\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
